--- a/CAAQuebecBLs.ipynb
+++ b/CAAQuebecBLs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,21 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pandas.core.series.Series"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Shaping the dataframe\n",
+    "\n",
     "base = base.drop(\n",
     "    columns = base.columns.difference(\n",
     "        [\n",
@@ -62,29 +53,6 @@
     "    )\n",
     ")\n",
     "\n",
-    "groups = base.groupby('Target URL')\n",
-    "type(base.loc[:, 'Target URL'].value_counts())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(17, 3)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Shaping the dataframe\n",
-    "\n",
     "df = pd.DataFrame(base.loc[:, 'Target URL'].value_counts())\n",
     "df = df.rename(columns={\"Target URL\": \"Count\"})\n",
     "df = df.sort_values(by='Count', ascending=False)\n",
@@ -93,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +87,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Updating the gas price tool\n",
+    "df.loc[df.index.str.contains(\n",
+    "    'https://www.caaquebec.com/fr/sur-la-route/interets-publics/'\n",
+    "    'dossier-essence/info-essence'\n",
+    "    ), 'Type'] = 'Tool'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# update 'les pires routes' to type == contest\n",
+    "df.loc[df.index.str.contains('les-pires-routes'), 'Type'] = 'Campaign'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# update the \"dossier-essence\" url components\n",
+    "df.loc[df.index.str.contains('composantes-du-prix-de-lessenc'), 'Type'] = 'Blog'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# update urls containing 'enfant' to type = 'Campaign'\n",
+    "df.loc[df.index.str.contains('enfants'), 'Type'] = 'Campaign'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# update urls containing 'garage' to type = 'Tool'\n",
+    "df.loc[df.index.str.contains('garage'), 'Type'] = 'Tool'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# update urls containing 'conseils' to type = 'Blog'\n",
+    "df.loc[df.index.str.contains('conseils') , 'Type'] = 'Blog'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -150,9 +181,81 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/interets-publics/les-pires-routes/</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Contest</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/interets-publics/les-pires-routes/palmares-2022-par-regions/</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Contest</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/interets-publics/dossier-essence/composantes-du-prix-de-lessence/</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Blog</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>https://www.caaquebec.com/fr/sur-la-route/interets-publics/dossier-essence/info-essence/</th>\n",
        "      <td>5</td>\n",
        "      <td>Tool</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/interets-publics/les-pires-routes/palmares-2016-par-regions/</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Contest</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/services/verification-de-sieges-dauto-pour-enfants/</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Campaign</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/reseaux-recommandes/garages-recommandes/</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Tool</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/conseils/</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Blog</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/reseaux-recommandes/verification-de-sieges-dauto-pour-enfants/</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Campaign</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/services/immatriculation-et-permis-de-conduire/</th>\n",
+       "      <td>2</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/interets-publics/dossier-essence/composantes-du-prix-de-lessence</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Blog</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/services/service-routier-durgence/</th>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/services/sieges-dauto-pour-enfants</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Campaign</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -161,32 +264,152 @@
        "      <td>Tool</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/conseils/essais-routiers/</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Blog</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/conseils/outils-et-references/couts-dutilisation-des-vehicules/</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Blog</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/garages-recommandes/</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Tool</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/services/assistance-velo/?itcid=assistance-velo&amp;itccat=accroches</th>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/conseils/outils-et-references/rappels-automobiles/</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Blog</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/interets-publics/mobilite-durable/bornes-de-recharge-publiques-pour-voitures-electriques/</th>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/services/mediation-en-cas-de-differend-avec-un-commercant/entente-avec-lamvoq/</th>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/services/estimation-de-la-valeur-dun-vehicule-doccasion/</th>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/interets-publics/les-pires-routes/palmares-2021-par-regions/</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Contest</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/conseils/outils-et-references/garantie-des-vehicules-neufs/garanties-des-vehicules-neufs-2019/</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Blog</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/services/service-routier-durgence/?utm_id=Caa_quebec</th>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/services/verification-de-sieges-dauto-pour-enfants/resultats/region/monteregie</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Campaign</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/services/verification-de-sieges-dauto-pour-enfants/resultats/region/monteregie/</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Campaign</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/interets-publics/securite-routiere/brigade-scolaire/</th>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/interets-publics/mobilite-durable/bornes-de-recharge/</th>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.caaquebec.com/fr/sur-la-route/conseils/essais-routiers/action/show/essai/1983/3/</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Blog</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                    Count  Type keyword\n",
-       "https://www.caaquebec.com/fr/sur-la-route/inter...      5  Tool        \n",
-       "https://www.caaquebec.com/fr/sur-la-route/inter...      1  Tool        "
+       "                                                    Count      Type keyword\n",
+       "https://www.caaquebec.com/fr/sur-la-route/inter...     11   Contest        \n",
+       "https://www.caaquebec.com/fr/sur-la-route/inter...      5   Contest        \n",
+       "https://www.caaquebec.com/fr/sur-la-route/inter...      5      Blog        \n",
+       "https://www.caaquebec.com/fr/sur-la-route/inter...      5      Tool        \n",
+       "https://www.caaquebec.com/fr/sur-la-route/inter...      4   Contest        \n",
+       "https://www.caaquebec.com/fr/sur-la-route/servi...      2  Campaign        \n",
+       "https://www.caaquebec.com/fr/sur-la-route/resea...      2      Tool        \n",
+       "https://www.caaquebec.com/fr/sur-la-route/conse...      2      Blog        \n",
+       "https://www.caaquebec.com/fr/sur-la-route/resea...      2  Campaign        \n",
+       "https://www.caaquebec.com/fr/sur-la-route/servi...      2                  \n",
+       "https://www.caaquebec.com/fr/sur-la-route/inter...      1      Blog        \n",
+       "https://www.caaquebec.com/fr/sur-la-route/servi...      1                  \n",
+       "https://www.caaquebec.com/fr/sur-la-route/servi...      1  Campaign        \n",
+       "https://www.caaquebec.com/fr/sur-la-route/inter...      1      Tool        \n",
+       "https://www.caaquebec.com/fr/sur-la-route/conse...      1      Blog        \n",
+       "https://www.caaquebec.com/fr/sur-la-route/conse...      1      Blog        \n",
+       "https://www.caaquebec.com/fr/sur-la-route/garag...      1      Tool        \n",
+       "https://www.caaquebec.com/fr/sur-la-route/servi...      1                  \n",
+       "https://www.caaquebec.com/fr/sur-la-route/conse...      1      Blog        \n",
+       "https://www.caaquebec.com/fr/sur-la-route/inter...      1                  \n",
+       "https://www.caaquebec.com/fr/sur-la-route/servi...      1                  \n",
+       "https://www.caaquebec.com/fr/sur-la-route/servi...      1                  \n",
+       "https://www.caaquebec.com/fr/sur-la-route/inter...      1   Contest        \n",
+       "https://www.caaquebec.com/fr/sur-la-route/conse...      1      Blog        \n",
+       "https://www.caaquebec.com/fr/sur-la-route/servi...      1                  \n",
+       "https://www.caaquebec.com/fr/sur-la-route/servi...      1  Campaign        \n",
+       "https://www.caaquebec.com/fr/sur-la-route/servi...      1  Campaign        \n",
+       "https://www.caaquebec.com/fr/sur-la-route/inter...      1                  \n",
+       "https://www.caaquebec.com/fr/sur-la-route/inter...      1                  \n",
+       "https://www.caaquebec.com/fr/sur-la-route/conse...      1      Blog        "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# individual updates\n",
-    "df.loc[df.index.str.contains(\n",
-    "    'https://www.caaquebec.com/fr/sur-la-route/interets-publics/'\n",
-    "    'dossier-essence/info-essence'\n",
-    "    ), 'Type'] = 'Tool'"
+    "df.loc[df.index.str.contains('sur-la-route')]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +482,7 @@
        "http://www.caaquebec.com/Accueil/                       8                 "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
