did i need to commit this?
man data science is hard work. :/

--- a/CAAQuebecBLs.ipynb
+++ b/CAAQuebecBLs.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# update urls containing 'immatriculation et permis' to type = 'Tool'\n",
+    "df.loc[df.index.str.contains('immatriculation'), 'Type'] = 'Tool'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# update urls containig 'roadside assistance' to type = 'Product'\n",
+    "df.loc[df.index.str.contains('routier-durgence'), 'Type'] = 'Product'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +257,7 @@
        "    <tr>\n",
        "      <th>https://www.caaquebec.com/fr/sur-la-route/services/immatriculation-et-permis-de-conduire/</th>\n",
        "      <td>2</td>\n",
-       "      <td></td>\n",
+       "      <td>Tool</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -249,7 +269,7 @@
        "    <tr>\n",
        "      <th>https://www.caaquebec.com/fr/sur-la-route/services/service-routier-durgence/</th>\n",
        "      <td>1</td>\n",
-       "      <td></td>\n",
+       "      <td>Product</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -327,7 +347,7 @@
        "    <tr>\n",
        "      <th>https://www.caaquebec.com/fr/sur-la-route/services/service-routier-durgence/?utm_id=Caa_quebec</th>\n",
        "      <td>1</td>\n",
-       "      <td></td>\n",
+       "      <td>Product</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -375,9 +395,9 @@
        "https://www.caaquebec.com/fr/sur-la-route/resea...      2      Tool        \n",
        "https://www.caaquebec.com/fr/sur-la-route/conse...      2      Blog        \n",
        "https://www.caaquebec.com/fr/sur-la-route/resea...      2  Campaign        \n",
-       "https://www.caaquebec.com/fr/sur-la-route/servi...      2                  \n",
+       "https://www.caaquebec.com/fr/sur-la-route/servi...      2      Tool        \n",
        "https://www.caaquebec.com/fr/sur-la-route/inter...      1      Blog        \n",
-       "https://www.caaquebec.com/fr/sur-la-route/servi...      1                  \n",
+       "https://www.caaquebec.com/fr/sur-la-route/servi...      1   Product        \n",
        "https://www.caaquebec.com/fr/sur-la-route/servi...      1  Campaign        \n",
        "https://www.caaquebec.com/fr/sur-la-route/inter...      1      Tool        \n",
        "https://www.caaquebec.com/fr/sur-la-route/conse...      1      Blog        \n",
@@ -390,7 +410,7 @@
        "https://www.caaquebec.com/fr/sur-la-route/servi...      1                  \n",
        "https://www.caaquebec.com/fr/sur-la-route/inter...      1   Contest        \n",
        "https://www.caaquebec.com/fr/sur-la-route/conse...      1      Blog        \n",
-       "https://www.caaquebec.com/fr/sur-la-route/servi...      1                  \n",
+       "https://www.caaquebec.com/fr/sur-la-route/servi...      1   Product        \n",
        "https://www.caaquebec.com/fr/sur-la-route/servi...      1  Campaign        \n",
        "https://www.caaquebec.com/fr/sur-la-route/servi...      1  Campaign        \n",
        "https://www.caaquebec.com/fr/sur-la-route/inter...      1                  \n",
@@ -398,7 +418,7 @@
        "https://www.caaquebec.com/fr/sur-la-route/conse...      1      Blog        "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
