--- a/traffic/test.ipynb
+++ b/traffic/test.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Hooman Deghani\\AppData\\Local\\Temp\\ipykernel_13000\\2543247844.py:10: FutureWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "C:\\Users\\Hooman Deghani\\AppData\\Local\\Temp\\ipykernel_14192\\2543247844.py:10: FutureWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
       "  base.loc[:, 'period'] = pd.to_datetime(base.loc[:, 'period'])\n"
      ]
     }
@@ -31,32 +31,121 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>action_page.url</th>\n",
+       "      <th>content_same_visit___num_initiated_quotes</th>\n",
+       "      <th>content_same_visit___num_quotes</th>\n",
+       "      <th>content_same_visit___num_sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>/home-page</td>\n",
+       "      <td>32375</td>\n",
+       "      <td>17752</td>\n",
+       "      <td>8835</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>/tenant</td>\n",
+       "      <td>10446</td>\n",
+       "      <td>6434</td>\n",
+       "      <td>3130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>/tenant/ontario/toronto</td>\n",
+       "      <td>5376</td>\n",
+       "      <td>3491</td>\n",
+       "      <td>1349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>/tenant/alberta</td>\n",
+       "      <td>3873</td>\n",
+       "      <td>2450</td>\n",
+       "      <td>787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>/tenant/bc</td>\n",
+       "      <td>2851</td>\n",
+       "      <td>1772</td>\n",
+       "      <td>649</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           action_page.url  content_same_visit___num_initiated_quotes  \\\n",
+       "0               /home-page                                      32375   \n",
+       "1                  /tenant                                      10446   \n",
+       "2  /tenant/ontario/toronto                                       5376   \n",
+       "3          /tenant/alberta                                       3873   \n",
+       "4               /tenant/bc                                       2851   \n",
+       "\n",
+       "   content_same_visit___num_quotes  content_same_visit___num_sales  \n",
+       "0                            17752                            8835  \n",
+       "1                             6434                            3130  \n",
+       "2                             3491                            1349  \n",
+       "3                             2450                             787  \n",
+       "4                             1772                             649  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# filter for 2022 only\n",
     "\n",
-    "df = base.loc[('2022-01-01' <= base.loc[:, 'period']) &\n",
+    "temp = base.loc[('2022-01-01' <= base.loc[:, 'period']) &\n",
     " (base.loc[:, 'period'] <= '2022-12-29'),]\n",
     "\n",
     "# drop unneeded columns\n",
-    "df = df.drop(columns = df.columns.difference([\n",
+    "temp = temp.drop(columns = temp.columns.difference([\n",
     "    'quarter', 'period', 'content_same_visit___num_initiated_quotes',\n",
     "    'content_same_visit___num_quotes', 'content_same_visit___num_sales',\n",
     "    'action_page.url'\n",
     "]))\n",
     "\n",
     "# add \"/\" to start of action_page.url to match GA\n",
-    "df.loc[:, 'action_page.url'] = df.loc[:, 'action_page.url'].apply(\n",
+    "temp.loc[:, 'action_page.url'] = temp.loc[:, 'action_page.url'].apply(\n",
     "    lambda x: \"/\" + x\n",
     ")\n",
     "\n",
     "# perform some sort of sum for each action page to just be unified\n",
     "\n",
-    "jo = df.groupby('action_page.url').sum(numeric_only=True)\n",
+    "jo = temp.groupby('action_page.url').sum(numeric_only=True)\n",
     "jo = jo.sort_values(by='content_same_visit___num_initiated_quotes',\n",
     " ascending=False)\n",
     "\n",
-    "jo = jo.reset_index()"
+    "jo = jo.reset_index()\n",
+    "jo.head()"
    ]
   },
   {
@@ -68,7 +157,7 @@
     "# fix up GA's data\n",
     "\n",
     "ga = pd.read_csv(\n",
-    "    r\"C:\\Users\\Hooman Deghani\\OneDrive\\PC\\Desktop\\Current Datasets\\Analytics Main (including login data) Channels 20220101-20230101 (1).csv\",\n",
+    "    r\"C:\\Users\\Hooman Deghani\\OneDrive\\PC\\Desktop\\Current Datasets\\Analytics Main (including login data) Channels 20220101-20230101.csv\",\n",
     "    comment = \"#\"\n",
     ")\n",
     "\n",
@@ -105,7 +194,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Hooman Deghani\\AppData\\Local\\Temp\\ipykernel_13000\\2769899595.py:2: FutureWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "C:\\Users\\Hooman Deghani\\AppData\\Local\\Temp\\ipykernel_14192\\2769899595.py:2: FutureWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
       "  df.loc[:, 'Sessions'] = df.loc[:, 'Sessions'].apply(\n"
      ]
     }
@@ -127,7 +216,7 @@
     {
      "data": {
       "text/plain": [
-       "(511, 7)"
+       "(802, 7)"
       ]
      },
      "execution_count": 6,
@@ -155,116 +244,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Hooman Deghani\\AppData\\Local\\Temp\\ipykernel_13000\\3752580715.py:19: FutureWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "C:\\Users\\Hooman Deghani\\AppData\\Local\\Temp\\ipykernel_14192\\4193611878.py:19: FutureWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
       "  rt.loc[:,'Position'] = rt.loc[:, 'Position'].apply(\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>URL</th>\n",
-       "      <th>Position</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>/</td>\n",
-       "      <td>13.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>/condo</td>\n",
-       "      <td>31.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>/condo/alberta</td>\n",
-       "      <td>7.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>/condo/alberta/calgary</td>\n",
-       "      <td>4.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>/condo/bc</td>\n",
-       "      <td>6.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>412</th>\n",
-       "      <td>/tenant/quebec</td>\n",
-       "      <td>3.60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>413</th>\n",
-       "      <td>/tenant/saskatchewan/regina</td>\n",
-       "      <td>1.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>414</th>\n",
-       "      <td>/types-specialty-property</td>\n",
-       "      <td>7.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>415</th>\n",
-       "      <td>/vacation-property</td>\n",
-       "      <td>7.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>416</th>\n",
-       "      <td>/wp-content/uploads/2015/07/A-first-time-homeo...</td>\n",
-       "      <td>25.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>417 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                   URL  Position\n",
-       "0                                                    /     13.75\n",
-       "1                                               /condo     31.00\n",
-       "2                                       /condo/alberta      7.00\n",
-       "3                               /condo/alberta/calgary      4.50\n",
-       "4                                            /condo/bc      6.50\n",
-       "..                                                 ...       ...\n",
-       "412                                     /tenant/quebec      3.60\n",
-       "413                        /tenant/saskatchewan/regina      1.00\n",
-       "414                          /types-specialty-property      7.00\n",
-       "415                                 /vacation-property      7.00\n",
-       "416  /wp-content/uploads/2015/07/A-first-time-homeo...     25.00\n",
-       "\n",
-       "[417 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -290,9 +272,7 @@
     "    lambda x: float(x)\n",
     ")\n",
     "\n",
-    "rt = rt.groupby('URL').mean().reset_index()\n",
-    "\n",
-    "rt"
+    "rt = rt.groupby('URL').mean().reset_index()"
    ]
   },
   {
@@ -311,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +314,8 @@
     "    (df.loc[:, 'Position'] > 3)\n",
     "]\n",
     "\n",
-    "result.to_csv('results.csv')"
+    "result.to_csv('results.csv')\n",
+    "df.to_csv('Dataframe.csv')"
    ]
   }
  ],
@@ -354,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5 (tags/v3.10.5:f377153, Jun  6 2022, 16:14:13) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
