--- a/traffic/potential/potential.ipynb
+++ b/traffic/potential/potential.ipynb
@@ -14,20 +14,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Hooman Deghani\\AppData\\Local\\Temp\\ipykernel_33468\\45720588.py:5: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "  ds = pd.Series()\n"
+     ]
+    }
+   ],
    "source": [
     "# create the glob list\n",
     "\n",
     "files = glob.glob(r\"C:\\Users\\Hooman Deghani\\OneDrive\\PC\\Desktop\\Current Datasets\\Potentials\\*.csv\")\n",
     "\n",
-    "lelist = []"
+    "ds = pd.Series()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,81 +67,16 @@
     "    m.loc[:, 'wkd'] = (m.loc[:, 'Volume'] / m.loc[:, 'Volume'].sum()) * m.loc[:, 'KD']\n",
     "    w_average = m.loc[:, 'wkd'].sum()\n",
     "\n",
-    "    lelist.append([file, {'average': average}, {'w_average': w_average}])\n"
+    "    ds[file] = m.loc[:, 'Volume'].sum()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['C:\\\\Users\\\\Hooman Deghani\\\\OneDrive\\\\PC\\\\Desktop\\\\Current Datasets\\\\Potentials\\\\www.squareone.ca-condo-ontario-toronto-organ__2023-02-06_14-18-40.csv',\n",
-       "  {'average': 8.9375},\n",
-       "  {'w_average': 10.49367088607595}],\n",
-       " ['C:\\\\Users\\\\Hooman Deghani\\\\OneDrive\\\\PC\\\\Desktop\\\\Current Datasets\\\\Potentials\\\\www.squareone.ca-condo-organic-keywords-path__2023-02-06_14-13-55.csv',\n",
-       "  {'average': 6.589743589743589},\n",
-       "  {'w_average': 8.63650075414781}],\n",
-       " ['C:\\\\Users\\\\Hooman Deghani\\\\OneDrive\\\\PC\\\\Desktop\\\\Current Datasets\\\\Potentials\\\\www.squareone.ca-fr-habitation-organic-keywo__2023-02-06_14-17-20.csv',\n",
-       "  {'average': 4.9},\n",
-       "  {'w_average': 27.405660377358487}],\n",
-       " ['C:\\\\Users\\\\Hooman Deghani\\\\OneDrive\\\\PC\\\\Desktop\\\\Current Datasets\\\\Potentials\\\\www.squareone.ca-fr-habitation-quebec-montre__2023-02-06_14-19-03.csv',\n",
-       "  {'average': 1.0},\n",
-       "  {'w_average': 0.9999999999999999}],\n",
-       " ['C:\\\\Users\\\\Hooman Deghani\\\\OneDrive\\\\PC\\\\Desktop\\\\Current Datasets\\\\Potentials\\\\www.squareone.ca-fr-habitation-quebec-organi__2023-02-06_14-14-06.csv',\n",
-       "  {'average': 1.0},\n",
-       "  {'w_average': 0.9999999999999999}],\n",
-       " ['C:\\\\Users\\\\Hooman Deghani\\\\OneDrive\\\\PC\\\\Desktop\\\\Current Datasets\\\\Potentials\\\\www.squareone.ca-home-alberta-edmonton-organ__2023-02-06_14-18-27.csv',\n",
-       "  {'average': 3.933333333333333},\n",
-       "  {'w_average': 3.9647887323943656}],\n",
-       " ['C:\\\\Users\\\\Hooman Deghani\\\\OneDrive\\\\PC\\\\Desktop\\\\Current Datasets\\\\Potentials\\\\www.squareone.ca-home-organic-keywords-path-__2023-02-06_14-16-07.csv',\n",
-       "  {'average': 10.244541484716157},\n",
-       "  {'w_average': 12.92048757618378}],\n",
-       " ['C:\\\\Users\\\\Hooman Deghani\\\\OneDrive\\\\PC\\\\Desktop\\\\Current Datasets\\\\Potentials\\\\www.squareone.ca-home-quebec-organic-keyword__2023-02-06_14-15-15.csv',\n",
-       "  {'average': 6.384615384615385},\n",
-       "  {'w_average': 6.174721189591078}],\n",
-       " ['C:\\\\Users\\\\Hooman Deghani\\\\OneDrive\\\\PC\\\\Desktop\\\\Current Datasets\\\\Potentials\\\\www.squareone.ca-rental-property-organic-key__2023-02-06_14-18-52.csv',\n",
-       "  {'average': 10.923076923076923},\n",
-       "  {'w_average': 9.393414211438476}],\n",
-       " ['C:\\\\Users\\\\Hooman Deghani\\\\OneDrive\\\\PC\\\\Desktop\\\\Current Datasets\\\\Potentials\\\\www.squareone.ca-renters-ontario-organic-key__2023-02-06_14-13-25.csv',\n",
-       "  {'average': 15.451612903225806},\n",
-       "  {'w_average': 15.407547169811322}],\n",
-       " ['C:\\\\Users\\\\Hooman Deghani\\\\OneDrive\\\\PC\\\\Desktop\\\\Current Datasets\\\\Potentials\\\\www.squareone.ca-tenant-alberta-organic-keyw__2023-02-06_14-13-11.csv',\n",
-       "  {'average': 4.538461538461538},\n",
-       "  {'w_average': 4.357079252003562}],\n",
-       " ['C:\\\\Users\\\\Hooman Deghani\\\\OneDrive\\\\PC\\\\Desktop\\\\Current Datasets\\\\Potentials\\\\www.squareone.ca-tenant-bc-organic-keywords-__2023-02-06_14-12-03.csv',\n",
-       "  {'average': 9.880952380952381},\n",
-       "  {'w_average': 9.368866328257191}],\n",
-       " ['C:\\\\Users\\\\Hooman Deghani\\\\OneDrive\\\\PC\\\\Desktop\\\\Current Datasets\\\\Potentials\\\\www.squareone.ca-tenant-bc-vancouver-organic__2023-02-06_14-11-40.csv',\n",
-       "  {'average': 12.2},\n",
-       "  {'w_average': 10.746710526315791}],\n",
-       " ['C:\\\\Users\\\\Hooman Deghani\\\\OneDrive\\\\PC\\\\Desktop\\\\Current Datasets\\\\Potentials\\\\www.squareone.ca-tenant-organic-keywords-pat__2023-02-06_14-11-24.csv',\n",
-       "  {'average': 16.73728813559322},\n",
-       "  {'w_average': 17.769949618072484}],\n",
-       " ['C:\\\\Users\\\\Hooman Deghani\\\\OneDrive\\\\PC\\\\Desktop\\\\Current Datasets\\\\Potentials\\\\www.squareone.ca-tenant-quebec-organic-keywo__2023-02-06_14-13-43.csv',\n",
-       "  {'average': 6.769230769230769},\n",
-       "  {'w_average': 7.245614035087718}]]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lelist"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('yodawg.html', 'w') as file:\n",
-    "    file.write(str(lelist))"
+    "ds.to_csv('ds.csv')"
    ]
   }
  ],
