--- a/Outreach - Skyscraper/practice.ipynb
+++ b/Outreach - Skyscraper/practice.ipynb
@@ -5,7 +5,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import openai\n",
+    "key = \"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\""
+   ]
   }
  ],
  "metadata": {
@@ -16,14 +19,9 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.10.5 (tags/v3.10.5:f377153, Jun  6 2022, 16:14:13) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.5"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "eabca979b0553fa6d87e9a00c352604d3b703d4afc9641643dd42376492b80f6"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
