--- a/Outreach - Skyscraper/practice.ipynb
+++ b/Outreach - Skyscraper/practice.ipynb
@@ -2,13 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import openai\n",
-    "key = \"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\""
+    "import pandas as pd\n",
+    "from openpyxl import Workbook\n",
+    "\n",
+    "df = pd.read_csv(r\"C:\\Users\\Hooman Deghani\\OneDrive\\PC\\Desktop\\Input\\gpt-3.5-turbo\\xml_sitemap_urls.csv\")\n",
+    "\n",
+    "project = input(\"What is the project name? \")\n",
+    "df.to_excel(rf\"C:\\Users\\Hooman Deghani\\Python\\Data Analysis\\Outreach - Skyscraper\\Output\\Archive\\Fthb\\{project}.xlsx\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -18,7 +30,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.5"
   },
   "orig_nbformat": 4
